# mcp-rust-docs-embed

./: .env.example  .gitignore  Cargo.toml  README.md  todo.md  todos.md
.claude/: settings.local.json
examples/: clappy.rs  cli.rs  counter_server.rs  embed_flow.rs  new-chunks.rs  qdrant-client.rs  qdrant_example.rs  simple_embed.rs
src/: backend.rs  chunk_repo.rs  commands.rs  config.rs  data_store.rs  doc_generator.rs  doc_loader.rs  docs_builder.rs  documentation.rs  embedder.rs  error.rs  features.rs  github_processor.rs  json_types.rs  lib.rs  logging.rs  main.rs  my_types.rs  qdrant_w.rs  query.rs  query_embedder.rs  utils.rs
src/chunks/: markdown.rs  mod.rs  rust.rs  types.rs  typescript.rs
src/services/: documentation.rs  embedding.rs  mod.rs  query.rs
tap-md/: all.md  index.md  trait.Conv.md  trait.Pipe.md  trait.Tap.md  trait.TapFallible.md  trait.TapOptional.md  trait.TryConv.md
tap-md/conv/: index.md  trait.Conv.md  trait.TryConv.md
tap-md/pipe/: index.md  trait.Pipe.md
tap-md/prelude/: index.md  trait.Conv.md  trait.Pipe.md  trait.Tap.md  trait.TapFallible.md  trait.TapOptional.md  trait.TryConv.md
tap-md/tap/: index.md  trait.Tap.md  trait.TapFallible.md  trait.TapOptional.md
tests/: debug_external_crate.rs  markdown_chunking.rs  typescript_chunks.rs
