[package]
name = "embed-anything-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tap = "1.0.1"
thin-logger = "0.1.2"
tokio = { version = "1.45.1", features = ["full"] }
embed_anything = { version = "0.6.0", features = ["ort"] }
docx-rust = "=0.1.8"
ort-sys = "=2.0.0-rc.9"
clap = { version = "4.5.39", features = ["derive"] }
candle-core = "0.9.1"
qdrant-client = "1.14.0"
walkdir = "2.5.0"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "tls-native-tls", "macros"] }
uuid = "1.17.0"
nestruct = "0.1.0"
