[package]
name = "mcp-rust-docs-embed"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

tokio = { version = "1.45.1", features = ["full"] }
clap = { version = "4.5.39", features = ["derive"] }
qdrant-client = "1.14.0"
walkdir = "2.5.0"
uuid = "1.17.0"
cargo = "0.88.0"
tempfile = "3.20.0"
thiserror = "2.0.12"
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = [
    "server",
    "transport-sse-server",
    "transport-io",
    "transport-streamable-http-server",
    "auth",
] }
schemars = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std", "fmt", "chrono"] }
futures = "0.3"
axum = { version = "0.8", features = ["macros"] }
tokio-util = "0.7.15"
reqwest = { version = "0.12", features = ["json"] }
tap = "1.0.1"
async-openai = "0.28.3"
colored = "3.0.0"
